Agregar trancision de imagenes

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
         .no-scrollbar::-webkit-scrollbar {
             display: none;
         }
+
+        /* Image gallery animation */
+        @keyframes fadeInZoom {
+            0% {
+                opacity: 0;
+                transform: scale(0.95);
+            }
+            100% {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
     </style>
 <script type="importmap">
 {
